# kianRiscV

./: .gitmodules  README.md
asic/os/zephyr_kianv_asic/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  prj.conf
asic/os/zephyr_kianv_asic/boards/others/kianv_asic/: Kconfig  Kconfig.defconfig  Kconfig.kianv_asic  board.yml  kianv_asic.dts  kianv_asic.yaml  kianv_asic_defconfig
asic/os/zephyr_kianv_asic/boot/: dualboot.ld  dualboot_crt0.S  dualboot_loader.c
asic/os/zephyr_kianv_asic/drivers/serial/: uart_kianv_poll.c
asic/os/zephyr_kianv_asic/dts/bindings/: vendor-prefixes.txt
asic/os/zephyr_kianv_asic/dts/bindings/serial/: kianv,poll-uart.yaml
asic/os/zephyr_kianv_asic/dts/riscv/kianv/: kianv_rv32ima.dtsi
asic/os/zephyr_kianv_asic/patches/: micropython-kianv-asic.patch
asic/os/zephyr_kianv_asic/soc/kianv/kianv_rv32ima/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.c  soc.h  soc.yml
asic/os/zephyr_kianv_asic/src/: main.c
linux_socs/LinuxSoC_v2/: README.md
linux_socs/LinuxSoC_v2/engineering/: cache.v  cache_sram_D$.v  cache_sram_I$.v  dcache.v  defines_soc.vh  fifo.v  gpio.v  icache.v  rx_uart.v  soc.v  spi.v  spi_nor_flash.v  sram_sp.v  tx_uart.v
linux_socs/LinuxSoC_v2/engineering/boards/: sources.mk
linux_socs/LinuxSoC_v2/engineering/bootloader/: Makefile  bootloader.c  bootloader0.hex  bootloader1.hex  bootloader2.hex  bootloader3.hex  custom_stdlib.c  custom_stdlib.h  firmware.hex  kianv_io_utils.c  kianv_io_utils.h  riscv.ld  sd.c  spi.c  spi.h  start.S  timer.c  timer.h
(+19 files in other folders)
